<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.bmi.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cek_berat_badan"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:id="@+id/textView2"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:gravity="center_vertical">

        <RadioButton
            android:id="@+id/rdbLaki"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/laki_laki" />

        <RadioButton
            android:id="@+id/rdbPerempuan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/perempuan" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btncek"
        android:layout_centerHorizontal="true"
        android:text="@string/hasil_diagnosis" />

    <EditText
        android:id="@+id/hasilideal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView6"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="21dp"
        android:textSize="8sp" />

    <EditText
        android:id="@+id/hasilket1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hasilideal"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:textSize="10sp" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edittinggi"
        android:layout_below="@+id/editnama"
        android:layout_alignParentEnd="true"
        android:hint="@string/masukkan_tinggi_badan"
        android:textSize="14sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jenis_kelamin"
        android:id="@+id/textView4"
        android:layout_below="@+id/editberat"
        android:layout_alignParentStart="true"
        android:textSize="18sp" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editnama"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:hint="@string/masukkan_nama"
        android:layout_alignStart="@+id/edittinggi"
        android:textSize="14sp" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/btnexit"
        android:layout_above="@+id/textView6"
        android:layout_toEndOf="@+id/textView2" />

    <EditText
        android:id="@+id/hasilket2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hasilket1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="17dp"
        android:textSize="10sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nama"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/editnama"
        android:layout_alignBottom="@+id/editnama"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tinggi"
        android:id="@+id/textView3"
        android:textSize="18sp"
        android:layout_alignBaseline="@+id/edittinggi"
        android:layout_alignBottom="@+id/edittinggi"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/berat_badan"
        android:id="@+id/textView5"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_below="@+id/edittinggi"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editberat"
        android:hint="@string/masukkan_berat_badan"
        android:textSize="14sp"
        android:layout_alignBaseline="@+id/textView5"
        android:layout_alignBottom="@+id/textView5"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnclear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_alignStart="@+id/textView6"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btncek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioGroup"
        android:layout_toStartOf="@+id/textView2"
        android:text="@string/cek_in" />
</RelativeLayout>